syntax = "proto3";

package com.w3engineers.unicef.telemesh;

message TeleMeshMessage {
    string messageText = 1;
}

message TeleMeshChat {
    string messageId = 1;
    string friendId = 2;
    int32 messageType = 3;
    int64 messageTime = 4;
    int32 messageStatus = 5;

    TeleMeshMessage teleMeshMessage = 6;
}